# brew_project

./: .env  LICENSE  README.md  extrai.py  mkdocs.yml  pyproject.toml  submit_tabela.py
.gihub/workflows/: CI.yml
.github/workflows/: ci.yml
app/: funcao.py
docs/: index.md
src/raw_data/: processamento.py
src/raw_data/arquivo/state=Arizona/: 28ad6ed2bce54226adde23028f184022-0.parquet  96083dfc5bf346acafe744a528728425-0.parquet  b1e4d66be71c43c4bab0d080d53e4aac-0.parquet
src/raw_data/arquivo/state=California/: 28ad6ed2bce54226adde23028f184022-0.parquet  96083dfc5bf346acafe744a528728425-0.parquet  b1e4d66be71c43c4bab0d080d53e4aac-0.parquet
src/raw_data/arquivo/state=Colorado/: 28ad6ed2bce54226adde23028f184022-0.parquet  96083dfc5bf346acafe744a528728425-0.parquet  b1e4d66be71c43c4bab0d080d53e4aac-0.parquet
src/raw_data/arquivo/state=Delaware/: 28ad6ed2bce54226adde23028f184022-0.parquet  96083dfc5bf346acafe744a528728425-0.parquet  b1e4d66be71c43c4bab0d080d53e4aac-0.parquet
src/raw_data/arquivo/state=Idaho/: 28ad6ed2bce54226adde23028f184022-0.parquet  96083dfc5bf346acafe744a528728425-0.parquet  b1e4d66be71c43c4bab0d080d53e4aac-0.parquet
src/raw_data/arquivo/state=Illinois/: 28ad6ed2bce54226adde23028f184022-0.parquet  96083dfc5bf346acafe744a528728425-0.parquet  b1e4d66be71c43c4bab0d080d53e4aac-0.parquet
src/raw_data/arquivo/state=Indiana/: 28ad6ed2bce54226adde23028f184022-0.parquet  96083dfc5bf346acafe744a528728425-0.parquet  b1e4d66be71c43c4bab0d080d53e4aac-0.parquet
test/: test_inicial.py
utils/: extrai_api.py
(+60 files in other folders)
